landing page spacing, h1 font size mobile fix

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -120,9 +120,9 @@ h1 {
   text-shadow: 4px 4px 0px rgb(38, 44, 92, 0.15);
   font-size: 4.2rem;
 }
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   h1 {
-    font-size: 3.2 rem;
+    font-size: 3.2rem;
   }
 }
 @supports (-webkit-text-stroke: 1px black) {
